--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GmsUci</title>
+  <title> <%= full_title( yield(:title) ) %> </title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+<meta name="description" content="{ Subtle Patterns © Atle Mo }">
+  <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
+
 <body>
+	<div class = "back">
+	<%= render '/layouts/header' %>
 
-<%= yield %>
-
+	<div class = "container">
+     	<%= yield %>
+		<%= render '/layouts/footer' %>
+	</div>
+	</div>
 </body>
 </html>
