fixed wrong routing

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
 		<ul class = "nav navbar-nav">
 			<li> <%= link_to "Home", root_path %> </li>
 
-			<li> <%= link_to "Meet Our Members", about_path %> </li>
+			<li> <%= link_to "Meet Our Members", members_path %> </li>
 
 			<li> <%= link_to "Events", events_path %> <li>
 
