--- a/app/assets/stylesheets/simple_pages.css.scss
+++ b/app/assets/stylesheets/simple_pages.css.scss
@@ -13,7 +13,6 @@ $grayMediumLight: #eaeaea;
 
 html {
 	overflow-y: scroll;
-	background: url(gplaypattern.png) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
@@ -43,17 +42,15 @@ textarea{
 }
 
 .back{
-	background-image:url('gplaypattern_@2X.png');
+	background-image:url("congruent.png");
 }
 
 /* typography */
-@font-face{
-	font-family: headingFont;
-	src: url("//fonts.googleapis.com/css?family=Montserrat:400,700")
-}
+
+
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
-  font-family: headingFont;
+  font-family: Baskerville;
 }
 
 h1 {
@@ -131,3 +128,34 @@ footer {
 	}
 }
 
+.panel {
+     position: relative;
+	 left:290px;
+	 width: 50%;
+	 box-shadow: 0px 0px 3px 3px #D8FEF0;
+	
+	
+	.panel-default {
+ 
+   	
+	}
+	.panel-heading{
+	    color: #333333;
+		background-color: white;
+		border-color: #dddddd;
+	
+	}
+	.panel-title {
+	    
+		text-align: center;
+	}
+   
+	.panel-body {
+		margin-bottom: 20px;
+		
+
+	}
+	.panel-footer {
+	   padding: 2px;
+	}
+}
