--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,25 +1,20 @@
-<%= form_for(@event) do |f| %>
-  <% if @event.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@event.errors.count, "error") %> prohibited this event from being saved:</h2>
+<%= form_for @event, remote: true, html:{ class: "form-horizontal"} do |f| %>
 
-      <ul>
-      <% @event.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<ul class = "errors"> </ul>
+<button class="close" data-dismiss="modal" aria-hidden = "true">&times;</button> 
+<span class="help-block">
+ <%= f.text_field :title, :class =>"form-control", :placeholder => "Event Title"%>
+</span>
+
+<div class = "modal-body">
+ <%= f.text_area :body, :class => "form-control", :rows => "3" %>
+</div> 
+
+<div class = "modal-footer">
+ <%= submit_tag "Save", class: "form_submit" , :class => "btn btn-default", data:{ disable_with: 'Submitting...' }%>
+</div>
+
+
 <% end %>
+
