--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,30 +1,29 @@
 <% provide(:title, 'Events')%>
-<h1>Listing events</h1>
+<ul class="nav nav-tabs">
+  <li class="active"><a href="#home" data-toggle="tab">List</a></li>
+  <li><a href="#calendar" data-toggle="tab">Calendar</a></li>
+  <li><a href="#gmsp" data-toggle="tab">GMSP Sponsored Events + Updates</a></li>
+</ul>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<div class="tab-content">
+  <div class="tab-pane" id="calendar"></div>
+  <div class="tab-pane" id="gmsp"> <a href = "https://www.facebook.com/groups/GMSSoCalRegion/"> Join the SoCal Facebook group </a> </div>
 
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= event.title %></td>
-        <td><%= event.body %></td>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+</div>
+
+<div class = "page header">
+<h1>Events</h1>
+</div>
+   		<div class = "event-all">
+		<%= render 'index'%>
+		</div>
 
 <br>
 
-<%= link_to 'New Event', new_event_path %>
+
+<%= link_to 'New Event', new_event_path, remote: true %>
+<div id = "event-modal" class = "modal fade"> 
+<div class = "modal-dialog">
+<div id = "inner-event" class = "modal-content"></div>	
+</div>	
+</div>
