--- a/app/assets/stylesheets/simple_pages.css.scss
+++ b/app/assets/stylesheets/simple_pages.css.scss
@@ -42,7 +42,7 @@ textarea{
 }
 
 .back{
-	background-image:url("congruent.png");
+	background-image:url("congruent_pentagon.png");
 }
 
 /* typography */
