--- a/app/views/simple_pages/home.html.erb
+++ b/app/views/simple_pages/home.html.erb
@@ -54,7 +54,9 @@
       	<div class="col-md-4">
         	<h2> What are we doing right now? </h2>
 			<p> Meetings are held at _____ every ____ </p>
-			<p> Join our <%= link_to "Facebook", "#" %> group and connect with other scholars! </p>
+			<p> Join our <%= link_to "Facebook", "#" %> group and connect with other UCI scholars! </p>
+			<p> 
+				<a href = "https://www.facebook.com/groups/GMSSoCalRegion/"> Join the SoCal Facebook group! </a> 			  			</p>
       	</div>
 	
 	</div>
