--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title> <%= full_title( yield(:title) ) %> </title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag "event_calendar" %>
+  <%= javascript_include_tag "event-calendar" %>
   <%= csrf_meta_tags %>
   <meta name="description" content="{ Subtle Patterns © Atle Mo }">
   <!--[if lt IE 9]>
