--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -1,25 +1,21 @@
-<%= form_for(@member) do |f| %>
-  <% if @member.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@member.errors.count, "error") %> prohibited this member from being saved:</h2>
+<%= form_for @member, html:{ class: "form-horizontal"}, remote: true do |f| %>
 
-      <ul>
-      <% @member.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<ul class = "errors"> </ul>
+<button class="close" data-dismiss="modal" aria-hidden = "true">&times;</button> 
+<span class="help-block">
+ <div class="col-xm-6">
+ <%= f.text_field :name, :class =>"form-control input-sm", :placeholder => "Name"%>
+ </div>
+ <%= f.file_field :image, accept: 'image/png, image/gif, image/jpeg' %>
+</span>
+ 
+<div class = "modal-body">
+ <%= f.text_area :body, :class => "form-control", :rows => "3" , :placeholder => "Description" %>
+</div> 
 
-  <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </div>
-  <div class="field">
-    <%= f.label :body %><br>
-    <%= f.text_area :body %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<div class = "modal-footer">
+ <%= submit_tag "Save", class: "form_submit" , :class => "btn btn-default", data:{ disable_with: 'Submitting...' }%>
+</div>
+  
+  
 <% end %>
