--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,30 +1,24 @@
 <% provide(:title, 'Members')%>
-<h1>Listing members</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Body</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @members.each do |member| %>
-      <tr>
-        <td><%= member.title %></td>
-        <td><%= member.body %></td>
-        <td><%= link_to 'Show', member %></td>
-        <td><%= link_to 'Edit', edit_member_path(member) %></td>
-        <td><%= link_to 'Destroy', member, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+	<h2 style = "text-align:center"> We are a diverse group of Anteaters that, under GMS, are supported by the following 	associations: </h2>
+	<%= render 'associations' %>
 
-<br>
+	<h2 style = "text-align: center"> Our board and members </h2>
 
-<%= link_to 'New Member', new_member_path %>
+	<div class = "container-fluid">
+		<div class = "row">
+			<%= render 'index' %>
+		</div>
+	</div>
+
+	<br>
+
+	<%= link_to 'New Member', new_member_path, remote: true %>
+		<div id = "member-modal" class = "modal fade"> 
+			<div class = "modal-dialog">
+				<div id = "inner-member" class = "modal-content">
+				</div>	
+			</div>	
+		</div>
+
