--- a/app/views/simple_pages/contact.html.erb
+++ b/app/views/simple_pages/contact.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, 'Contact')%>
-<h1>SimplePages#contact</h1>
-<p>Find me in app/views/simple_pages/contact.html.erb</p>
+<h1>Contact</h1>
+<p></p>
