--- a/app/views/simple_pages/home.html.erb
+++ b/app/views/simple_pages/home.html.erb
@@ -54,9 +54,10 @@
       	<div class="col-md-4">
         	<h2> What are we doing right now? </h2>
 			<p> Meetings are held at _____ every ____ </p>
-			<p> Join our <%= link_to "Facebook", "#" %> group and connect with other UCI scholars! </p>
+			<p> Join our <%= link_to "Facebook", "https://www.facebook.com/groups/240066289387214/" %> group and connect with other UCI scholars! </p>
 			<p> 
-				<a href = "https://www.facebook.com/groups/GMSSoCalRegion/"> Join the SoCal Facebook group! </a> 			  			</p>
+				Join the <%= link_to "SoCal Facebook", "https://www.facebook.com/groups/GMSSoCalRegion/"%>  group! 			  		
+			</p>
       	</div>
 	
 	</div>
