--- a/app/views/members/update.js.erb
+++ b/app/views/members/update.js.erb
@@ -1,4 +1,4 @@
 $('#member-modal').modal('hide')
-window.location = "gmsa-uci.herokuapp.com/members"
+window.location = "/members"
 alert('Member was saved');
 
