--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -14,7 +14,7 @@
 </div> 
 
 <div class = "modal-footer">
- <%= submit_tag "Save", class: "form_submit" , :class => "btn btn-default", data:{ disable_with: 'Submitting...' }%>
+ <%= submit_tag "Save", class: "form_submit" , :class => "btn btn-info", data:{ disable_with: 'Submitting...' }%>
 </div>
   
   
