--- a/app/views/members/crop.html.erb
+++ b/app/views/members/crop.html.erb
@@ -1,30 +1,33 @@
 <script type="text/javascript">
     $(document).ready(function(){
-        $('#crop-modal').modal('show');
+        $('#crop-modal').modal('show');	
+        $('#crop-modal').on('show.bs.modal', function (e) {
+			$(this).find('.modal-body').css({ 
+			 	'max-height': '100%',
+			});
+       });
     });
-	$('#crop-modal').on('hidden.bs.modal', function(a) {
-		window.location.reload();
-		alert('Imaged was cropped!');
-	});	
 </script>
 
 <div class = "modal fade" id = "crop-modal">
-<div class="modal-content">
+
 <%= form_for @member, html:{ class: "form-horizontal"}, remote: true do |f| %>
-    
+    <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <div class = "center">
         <h4 class="modal-title"> Crop photo </h4>
+		</div>
       </div>
    
-	<div class="modal-body">
+	    <div class = "center">
    		<div class = "img-thumbnail">
 			<%= f.cropbox :image %>
 		</div>
-	</div>
+		</div>
 	 
 	<div class="modal-footer">
-        <%= f.submit %>	
+        <%= submit_tag "Save",:class => "btn btn-info", data:{ disable_with: 'Submitting...' }%>
     </div>
     
 	</div>
